* update gupnp-igd to 1.2.0-2

--- a/gupnp-igd/PKGBUILD
+++ b/gupnp-igd/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgname=gupnp-igd
 pkgver=1.2.0
-pkgrel=1.1
+pkgrel=2
 pkgdesc="A library to handle UPnP IGD port mapping"
 url="https://wiki.gnome.org/Projects/GUPnP"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -37,6 +37,6 @@ package() {
   depends+=(libg{lib,object,io}-2.0.so libg{ssdp,upnp}-1.2.so)
   provides+=(libgupnp-igd-1.0.so)
 
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 }
 
