* update virt-viewer to 11.0-1

--- a/virt-viewer/PKGBUILD
+++ b/virt-viewer/PKGBUILD
@@ -5,8 +5,8 @@
 # Contributor: Jonathan Wiersma <archaur at jonw dot org>
 
 pkgname=virt-viewer
-pkgver=10.0
-pkgrel=2
+pkgver=11.0
+pkgrel=1
 pkgdesc='A lightweight interface for interacting with the graphical display of virtualized guest OS.'
 arch=(x86_64 powerpc64le powerpc)
 url='https://gitlab.com/virt-viewer/virt-viewer'
@@ -15,20 +15,19 @@ depends=('gtk-vnc' 'libvirt' 'spice-gtk' 'libvirt-glib' 'libgovirt' 'vte3')
 makedepends=('meson' 'intltool' 'spice-protocol' 'gobject-introspection' 'bash-completion')
 replaces=('virtviewer')
 source=("https://virt-manager.org/download/sources/virt-viewer/virt-viewer-${pkgver}.tar.xz"{,.asc}
-        fix-sendkey-actions.patch::https://gitlab.com/berrange/virt-viewer/-/commit/aa6b4b40b8dac1ba38e06237db04bfd4fa5f4850.patch)
-b2sums=('3368164c2f770f8aa963e0fb93e713249b05d31600747b68197864a40bf6fdb221ad44abb8ea5465706543241bd5898353cadf2a3e0917455383283722fdfd4f'
+        meson-0.61.patch)
+b2sums=('41914a60361f0a47a0b0b54962d228ffaec67c6b69c664bb6fe683b7074dd5e2136d2bf3528b6e1b6b785cc4e337125fe16fdd94dd603dd42e8fde543931241a'
         'SKIP'
-        'f570a1dbf49db7c86b17287518c6dec737b1a1d2e033df60b7f82579573d85d59bee3d15e28d20e2231910db40d2b0c80bebc658eadbe23a4577b1ea80489c5b')
+        '85e7372be0ce12ea60e0403e7b7cfe4fd8193ab331d3ea7dac0505aaf5b62b8280c5e6b5be1774239e8551237c9e70dceac8586412b67417320c3b2c2da3a7ad')
 validpgpkeys=('DAF3A6FDB26B62912D0E8E3FBE86EBB415104FDF') # Daniel P. Berrange
 
 prepare() {
-  cd virt-viewer-${pkgver}
-  patch -Np1 < ../fix-sendkey-actions.patch
+  cd ${pkgname}-${pkgver}
+  patch -Np1 -i ${srcdir}/meson-0.61.patch
 }
 
 build() {
-  cd virt-viewer-${pkgver}
-  arch-meson build \
+  arch-meson virt-viewer-${pkgver} build \
     -Dlibvirt=enabled \
     -Dvnc=enabled \
     -Dspice=enabled \
@@ -40,13 +39,9 @@ build() {
 }
 
 check() {
-  cd virt-viewer-${pkgver}
-
   ninja -C build test
 }
 
 package() {
-  cd virt-viewer-${pkgver}
-
   DESTDIR="${pkgdir}" ninja -C build install
 }
