* update monero-gui to 0.17.3.2-1

--- a/monero-gui/PKGBUILD
+++ b/monero-gui/PKGBUILD
@@ -2,9 +2,9 @@
 # Maintainer: kpcyrd <kpcyrd[at]archlinux[dot]org>
 
 pkgname=monero-gui
-pkgver=0.17.3.1
-_commit=a959919b8ad798d1384f83c5bf3ed7a2d16dc8aa
-pkgrel=2
+pkgver=0.17.3.2
+_commit=2e2ae5c88fdc159477e8bc9ad871a892da83e935
+pkgrel=1
 pkgdesc="QT GUI wallet for Monero: the secure, private, untraceable peer-to-peer currency"
 license=('BSD')
 arch=(x86_64 powerpc64le powerpc)
@@ -54,21 +54,19 @@ prepare() {
 
 build() {
   cd "${pkgname}"
-  
+
   case "${CARCH}" in
     powerpc) export CXXFLAGS=" -latomic" ;;
   esac
 
-  cmake . \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=Release \
-    -DARCH=default -DNO_AES=1
+  mkdir -p build && cd build
+  cmake -D CMAKE_BUILD_TYPE=Release -D ARCH=default -D WITH_DESKTOP_ENTRY=OFF -D NO_AES=1 ../
   make
 }
 
 package() {
   cd "${pkgname}"
-  install -Dm755 ./bin/monero-wallet-gui -t "${pkgdir}/usr/bin"
+  install -Dm755 build/bin/monero-wallet-gui -t "${pkgdir}/usr/bin"
   install -Dm644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
 
   install -Dm644 ../monero-gui.desktop -t "${pkgdir}/usr/share/applications"
