--- a/valgrind/riscv64/PKGBUILD
+++ b/valgrind/riscv64/PKGBUILD
@@ -4,36 +4,33 @@
 # Contributor: Allan McRae <allan@archlinux.org>
 
 pkgname=valgrind
-pkgver=3.19.0
+pkgver=3.18.1
 pkgrel=1
 pkgdesc='Tool to help find memory-management problems in programs'
-arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 license=('GPL')
 url='http://valgrind.org/'
 depends=('glibc' 'perl')
-makedepends=('gdb' 'docbook-xml' 'docbook-xsl' 'docbook-sgml')
+makedepends=('gdb' 'docbook-xml' 'docbook-xsl' 'docbook-sgml' 'git')
 checkdepends=('procps-ng')
-makedepends_x86_64=('lib32-glibc' 'lib32-gcc-libs')
-optdepends_x86_64=('lib32-glibc: 32-bit ABI support')
 provides=('valgrind-multilib')
 replaces=('valgrind-multilib')
 options=('!emptydirs' '!strip')
-source=(https://sourceware.org/pub/valgrind/valgrind-${pkgver}.tar.bz2{,.asc}
-        valgrind-3.7.0-respect-flags.patch)
+_commit=dcb552358ec30f42e37d33aa1610b99c828b234c
+source=("git+https://github.com/petrpavlu/valgrind-riscv64.git#commit=${_commit}"
+         valgrind-3.7.0-respect-flags.patch)
 validpgpkeys=(
   0E9FFD0C16A1856CF9C7C690BA0166E698FA6035 # Julian Seward <jseward@acm.org>
   EC3CFE88F6CA0788774F5C1D1AA44BE649DE760A # Mark Wielaard <mjw@gnu.org>
 )
-sha512sums=('f720a89dc4c4989cc5714bff9efe97529f71990bcfad7a92b889ce099c4326d6da07fa4d5fbab2e9125e20f352354f6178471e49e419b613a3c82c2a1c667ab2'
-            'SKIP'
+sha512sums=('SKIP'
             'e0cec39381cefeca09ae4794cca309dfac7c8693e6315e137e64f5c33684598726d41cfbb4edf764fe985503b13ff596184ca5fc32b159d500ec092e4cf8838c')
-b2sums=('d3ccd25789ec4d87a0ddab58d8098246a33a083505b42adaa94ee3af659cbe073e516bc98163ef56233e6cd9de2125839b71ee443fbc0db6557dcb35a6c05280'
-        'SKIP'
+b2sums=('SKIP'
         'af556fdf3c02e37892bfe9afebc954cf2f1b2fa9b75c1caacfa9f3b456ebc02bf078475f9ee30079b3af5d150d41415a947c3d04235c1ea8412cf92b959c484a')
 options=(!lto) # https://bugs.kde.org/show_bug.cgi?id=338252
 
 prepare() {
-  cd valgrind-${pkgver}
+  cd valgrind-riscv64
   patch -Np1 < ../valgrind-3.7.0-respect-flags.patch
   sed -i 's|sgml/docbook/xsl-stylesheets|xml/docbook/xsl-stylesheets-1.79.2-nons|' docs/Makefile.am
 
@@ -46,7 +43,7 @@ build() {
   CFLAGS=${CFLAGS/-fno-plt/}
   CXXFLAGS=${CXXFLAGS/-fno-plt/}
 
-  cd valgrind-${pkgver}
+  cd valgrind-riscv64
   ./configure \
     --prefix=/usr \
     --sysconfdir=/etc \
@@ -58,7 +55,7 @@ build() {
 }
 
 check() {
-  cd valgrind-${pkgver}
+  cd valgrind-riscv64
 
   # Make sure a basic binary runs. There should be no errors.
   ./vg-in-place --error-exitcode=1 /bin/true
@@ -96,7 +93,7 @@ check() {
 }
 
 package() {
-  cd valgrind-${pkgver}
+  cd valgrind-riscv64
   make DESTDIR="${pkgdir}" install
 
   install -Dm644 docs/*.1 -t "$pkgdir/usr/share/man/man1"
