--- a/imlib2/PKGBUILD
+++ b/imlib2/PKGBUILD
@@ -4,32 +4,40 @@
 # Contributor: Tom Newsom <Jeepster.gmx.co.uk>
 
 pkgname=imlib2
-pkgver=1.7.4
-pkgrel=1
-pkgdesc="Library that does image file loading and saving as well as rendering, manipulation, arbitrary polygon support"
-url="https://sourceforge.net/projects/enlightenment/"
+pkgver=1.9.0
+pkgrel=3
+pkgdesc='Library that does image file loading and saving as well as rendering, manipulation, arbitrary polygon support'
+url='https://sourceforge.net/projects/enlightenment/'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('BSD')
-depends=('libtiff' 'giflib' 'bzip2' 'freetype2' 'libxext' 'libpng' 'libid3tag' 'libjpeg-turbo' 'libwebp')
-source=(https://downloads.sourceforge.net/enlightenment/$pkgname-$pkgver.tar.bz2)
-sha512sums=('54c213de38535f14359d9e407b9ae5911a158347525a298673ba53d122c3e506449feb34203e764e43d5aa163f3024093803cd976a23c0f0f65b843ed9685d66')
-
-
-prepare() {
-  cd "${pkgname}-${pkgver}"
-  sed -i 's/@my_libs@//' imlib2-config.in
-}
-
+options=('debug')
+makedepends=(# Currently highway does provide a static library only, that libjxl links to.
+             # This introduces a build dependency for now...
+             'highway'
+             'libheif' 'libid3tag' 'libjxl' 'librsvg' 'libspectre' 'libwebp' 'openjpeg2')
+depends=('bzip2' 'freetype2' 'giflib' 'libjpeg-turbo' 'libpng' 'libtiff' 'libxext' 'xz')
+optdepends=('libheif: HEIF loader (for AVIF)'
+            'libid3tag: ID3 loader'
+            'libjxl: JXL loader'
+            'librsvg: SVG loader'
+            'libspectre: PS loader'
+            'libwebp: WEBP loader'
+            'openjpeg2: J2K loader')
+source=("https://downloads.sourceforge.net/project/enlightenment/imlib2-src/${pkgver}/${pkgname}-${pkgver}.tar.xz")
+sha512sums=('958fdabc938ec03ab48001ca4df72c8352cb261b12b09334d38348b22b8859cff16a1cda0d4447b73261723f223f62a799f80eb85a710ac5a44a3fa4f90734fd')
 
 build() {
   cd "${pkgname}-${pkgver}"
 
-  [ $CARCH = "i686" ] && EXTRAOPTS="--enable-mmx"
-  [ $CARCH = "x86_64" ] && EXTRAOPTS="--enable-amd64"
+case "${CARCH}" in
+  i686)   EXTRAOPTS="--enable-mmx" ;;
+  x86_64) EXTRAOPTS="--enable-amd64" ;;
+esac
 
-  ./configure --prefix=/usr \
-              --sysconfdir=/etc/imlib2 \
-              --x-libraries=/usr/lib $EXTRAOPTS
+  ./configure \
+    --prefix=/usr \
+    --sysconfdir=/etc/imlib2 \
+    --x-libraries=/usr/lib ${EXTRAOPTS} 
   make
 }
 
