--- a/kitty/PKGBUILD
+++ b/kitty/PKGBUILD
@@ -1,23 +1,23 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Maintainer: Maxim Baz <$pkgname at maximbaz dot com>
 # Contributor: Fabio 'Lolix' Loli <lolix@disroot.org> -> https://github.com/FabioLolix
 # Contributor: Maximilian Kindshofer <maximilian@kindshofer.net>
 
 pkgbase=kitty
-pkgname=(kitty kitty-terminfo)
-pkgver=0.23.1
-pkgrel=1
+pkgname=(kitty kitty-terminfo kitty-shell-integration)
+pkgver=0.25.0
+pkgrel=2
 pkgdesc="A modern, hackable, featureful, OpenGL-based terminal emulator"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/kovidgoyal/kitty"
 license=('GPL3')
 depends=('python3' 'freetype2'  'fontconfig' 'wayland' 'libx11' 'libxkbcommon-x11' 'libxi'
-         'hicolor-icon-theme' 'libgl' 'dbus' 'lcms2')
+         'hicolor-icon-theme' 'libgl' 'dbus' 'lcms2' 'librsync')
 makedepends=('libxinerama' 'libxcursor' 'libxrandr' 'wayland-protocols')
 source=("${pkgname}-${pkgver}.tar.xz::https://github.com/kovidgoyal/${pkgbase}/releases/download/v${pkgver}/${pkgbase}-${pkgver}.tar.xz"
         "${pkgname}-${pkgver}.tar.xz.sig::https://github.com/kovidgoyal/${pkgbase}/releases/download/v${pkgver}/${pkgbase}-${pkgver}.tar.xz.sig")
-sha512sums=('2d0c822e6bfca41b0a5e5e71e62f5073792b10c236287a509a6c790e19d098205c8719dbcb4aa630abbbaa3d44d6c9986c13efde7a9556772a89709383a0fe94'
+sha512sums=('fed8d66a9f7f2117f4b495305db0d56d8b85ef03bf7ef24a7dca31e63e16fc90e026aa8022237ad45678efb026f11fdd8aa377eb53917fd8ec885f2ccea721f8'
             'SKIP')
 validpgpkeys=('3CE1780F78DD88DF45194FD706BC317B515ACE7C') # Kovid Goyal
 
@@ -27,8 +27,9 @@ build() {
 }
 
 package_kitty() {
-  depends+=('kitty-terminfo')
+  depends+=('kitty-terminfo' 'kitty-shell-integration')
   optdepends=('imagemagick: viewing images with icat'
+              'python-pygments: syntax highlighting in kitty +kitten diff'
               'libcanberra: playing "bell" sound on terminal bell')
 
   cd "$srcdir/$pkgname-$pkgver"
@@ -38,16 +39,12 @@ package_kitty() {
   # completions
   python __main__.py + complete setup bash | install -Dm644 /dev/stdin "${pkgdir}"/usr/share/bash-completion/completions/kitty
   python __main__.py + complete setup fish | install -Dm644 /dev/stdin "${pkgdir}"/usr/share/fish/vendor_completions.d/kitty.fish
-  # doesn't know how to http://zsh.sourceforge.net/Doc/Release/Completion-System.html#Autoloaded-files
-  # so we write our own header
-  {
-      echo "#compdef kitty"
-      python __main__.py + complete setup zsh
-  } | install -Dm644 /dev/stdin "${pkgdir}"/usr/share/zsh/site-functions/_kitty
+  python __main__.py + complete setup zsh  | install -Dm644 /dev/stdin "${pkgdir}"/usr/share/zsh/site-functions/_kitty
 
   install -Dm644 "${pkgdir}"/usr/share/icons/hicolor/256x256/apps/kitty.png "${pkgdir}"/usr/share/pixmaps/kitty.png
 
   rm -r "$pkgdir"/usr/share/terminfo
+  rm -r "$pkgdir"/usr/lib/kitty/shell-integration
 
   install -Dm644 docs/_build/html/_downloads/*/kitty.conf "${pkgdir}"/usr/share/doc/${pkgname}/kitty.conf
 }
@@ -58,4 +55,11 @@ package_kitty-terminfo() {
 
   mkdir -p "$pkgdir/usr/share/terminfo"
   tic -x -o "$pkgdir/usr/share/terminfo" $pkgbase-$pkgver/terminfo/kitty.terminfo
+}
+
+package_kitty-shell-integration() {
+  pkgdesc='Shell integration scripts for kitty, an OpenGL-based terminal emulator'
+
+  mkdir -p "$pkgdir/usr/lib/kitty/"
+  cp -r "$srcdir/$pkgbase-$pkgver/shell-integration" "$pkgdir/usr/lib/kitty/"
 }
