* update remmina to 1:1.4.25-1

--- a/remmina/PKGBUILD
+++ b/remmina/PKGBUILD
@@ -3,28 +3,29 @@
 
 pkgname=remmina
 epoch=1
-pkgver=1.4.20
+pkgver=1.4.25
 pkgrel=1
 pkgdesc="remote desktop client written in GTK+"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.remmina.org/"
 license=('GPL')
 depends=('avahi' 'libgcrypt' 'libssh' 'vte3' 'libsodium' 'libappindicator-gtk3')
-makedepends=('cmake' 'freerdp' 'libvncserver' 'spice-gtk' 'spice-protocol' 'telepathy-glib'
-             'harfbuzz' 'xorgproto' 'gobject-introspection' 'kwallet')
+makedepends=('cmake' 'freerdp' 'libvncserver' 'spice-gtk' 'spice-protocol'
+             'harfbuzz' 'xorgproto' 'gobject-introspection' 'kwallet'
+             'webkit2gtk' 'gtk-vnc')
 optdepends=('freerdp: RDP plugin'
             'libsecret: Secret plugin'
             'libvncserver: VNC plugin'
-            'libxkbfile: NX plugin'
-            'nxproxy: NX plugin'
             'spice-gtk: Spice plugin'
-            'telepathy-glib: Telepathy plugin'
-            'xorg-server-xephyr: XDMCP plugin'
+#            'pyhoca-cli: X2Go plugin'
+            'webkit2gtk: WWW plugin'
+            'gtk-vnc: GVNC plugin'
+            'kwallet: kwallet plugin'
             'gnome-terminal: external tools')
 replaces=('remmina-plugins')
 provides=('remmina-plugins')
 source=("$pkgname-$pkgver.tar.bz2::https://gitlab.com/Remmina/Remmina/-/archive/v${pkgver/rc/-rc}/Remmina-v${pkgver/rc/-rc}.tar.bz2")
-sha512sums=('14c5f5312bc97b3d12c95a84ab57fb0cdfdb237ad9e0b8853f514013901205457bf9a621d68edb8d8688758384184fb2c730126b89efaecc29bddf049e4cfb78')
+sha512sums=('aa35e993dc3fb79eb8bfdfb257c6f2b3d7edb14e1911337301477f9756f01021bae3db564727600ed1cb657618b07ab4b9f520b4329ab9288c2399cabba45f81')
 
 build() {
   cmake -S Remmina-v${pkgver/rc/-rc} -B build \
@@ -32,7 +33,9 @@ build() {
     -DCMAKE_INSTALL_LIBDIR=/usr/lib \
     -DWITH_APPINDICATOR=ON \
     -DWITH_NEWS=OFF \
-    -DWITH_KF5WALLET=ON
+    -DWITH_KF5WALLET=ON \
+    -DWITH_X2GO=ON \
+    -DWITH_GVNC=ON
   cmake --build build
 }
 
