--- a/openimageio/PKGBUILD
+++ b/openimageio/PKGBUILD
@@ -1,10 +1,10 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Sven-Hendrik Haase <svenstaro@gmail.com>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: SpepS <dreamspepser at yahoo dot it>
 
 pkgname=openimageio
-pkgver=2.2.18.0
-pkgrel=4
+pkgver=2.3.14.0
+pkgrel=1
 pkgdesc="A library for reading and writing images, including classes, utilities, and applications"
 arch=(x86_64 powerpc64le)
 url="http://www.openimageio.org/"
@@ -15,29 +15,29 @@ depends=('openexr' 'boost-libs' 'openjpeg2' 'glew' 'libtiff' 'opencolorio' 'libp
 makedepends=('cmake' 'qt5-base' 'python' 'boost' 'mesa' 'fontconfig' 'libxrender' 'ninja' 'robin-map')
 optdepends=('qt5-base: iv image viewer'
             'python: bindings support')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/OpenImageIO/oiio/archive/Release-$pkgver.tar.gz")
-sha512sums=('22a61e8b1ca098c2293e972372d02f0ac8ce54b46eb957b1ffcacb9e0ca4ff13f560d67804e0db0a898d8bec2fdb73f3cdcd1ee1867f92f97f84c1c111e535be')
+source=("$pkgname-$pkgver.tar.gz::https://github.com/OpenImageIO/oiio/archive/refs/tags/v$pkgver.tar.gz")
+sha512sums=('42f0925bfe5470d9ed43dfd90e008b940ee6e43be4446be1853ee2cbac66041a9cbf1a469f72dc66bc6bec60d3b0049652b8c928d0d56a893b7e4185ce49dc76')
 
 build() {
-  cd oiio-Release-$pkgver
+  cd oiio-$pkgver
 
   cmake \
-      -Bbuild \
-      -GNinja \
-      -DUSE_PYTHON=ON \
-      -DPYTHON_VERSION=3.10 \
-      -DCMAKE_INSTALL_PREFIX=/usr \
-      -DCMAKE_INSTALL_LIBDIR=lib \
-      -DOIIO_BUILD_TESTS=ON \
-      -DOIIO_BUILD_TOOLS=ON \
-      -DBUILD_MISSING_FMT=OFF \
-      -DUSE_EXTERNAL_PUGIXML=ON \
-      -DSTOP_ON_WARNING=OFF
+    -Bbuild \
+    -GNinja \
+    -DUSE_PYTHON=ON \
+    -DPYTHON_VERSION=3.10 \
+    -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_INSTALL_LIBDIR=lib \
+    -DOIIO_BUILD_TESTS=ON \
+    -DOIIO_BUILD_TOOLS=ON \
+    -DBUILD_MISSING_FMT=OFF \
+    -DUSE_EXTERNAL_PUGIXML=ON \
+    -DSTOP_ON_WARNING=OFF
   ninja -C build
 }
 
 package() {
-  cd oiio-Release-$pkgver
+  cd oiio-$pkgver
 
   DESTDIR="$pkgdir" ninja -C build install
 
