--- a/man-db/PKGBUILD
+++ b/man-db/PKGBUILD
@@ -3,11 +3,11 @@
 # Contributor: Sergej Pupykin <sergej@aur.archlinux.org>
 
 pkgname=man-db
-pkgver=2.9.4
-pkgrel=2
+pkgver=2.10.2
+pkgrel=1
 pkgdesc="A utility for reading man pages"
 arch=(x86_64 powerpc64le powerpc riscv64)
-url="https://www.nongnu.org/man-db/"
+url="https://gitlab.com/cjwatson/man-db"
 license=('GPL' 'LGPL')
 depends=( 'bash' 'gdbm' 'zlib' 'groff' 'libpipeline' 'less' 'libseccomp')
 makedepends=('po4a')
@@ -16,26 +16,17 @@ backup=('etc/man_db.conf')
 conflicts=('man')
 provides=('man')
 replaces=('man')
+options=('debug')
 install=${pkgname}.install
 source=(https://savannah.nongnu.org/download/man-db/$pkgname-$pkgver.tar.xz{,.asc}
         # fallback should be used within first 24h after a release
         #https://download-mirror.savannah.gnu.org/releases/man-db/$pkgname-$pkgver.tar.xz{,.asc} 
-        snapdir.diff
         convert-mans
 )
 validpgpkeys=('AC0A4FF12611B6FCCF01C111393587D97D86500B') # Colin Watson <cjwatson@debian.org>
-sha512sums=('169f091dd0a1d0dbd1583366f8257afb8f57e030d0f7d4213c14ce0b1fc5debf8b9cf2731de503830cb2826b3a22b3cff7da993d44ec18557935bd293529133c'
+sha512sums=('5ad7a7b601aadf4d2d7cc068881fffe3d91dc85fcf4c17e66fbe6e2b04bb1c46f5ba5d4bc7f6ab3f39e00065be39061b101d3064c12b1e89f0fee61c088611bf'
             'SKIP'
-            'f24a8152c82c3b99dab2c34654382512f226bb6b0e5e3b1376d577019a4cca0f4e5a9ac92c62ed7ea5cf0ed3ad94509d34f455d845bc5fb026ef908da82cd5fe'
             '0b159285da20008f0fc0afb21f1eaebd39e8df5b0594880aa0e8a913b656608b8d16bb8d279d9e62d7aae52f62cb9b2fc49e237c6711f4a5170972b38d345535')
-
-prepare() {
-  cd ${pkgname}-${pkgver}
-  # fix default Add MANDB_MAP entry mapping /snap/man to /var/cache/man/snap
-  # Arch needs /var/lib/snapd/snap/man to /var/cache/man/snap
-  patch -Np0 -i ../snapdir.diff
-}
-
 
 build() {
   cd ${pkgname}-${pkgver}
@@ -44,6 +35,7 @@ build() {
     --sysconfdir=/etc \
     --libexecdir=/usr/lib \
     --with-systemdsystemunitdir=/usr/lib/systemd/system \
+    --with-snapdir=/var/lib/snapd/snap \
     --with-db=gdbm \
     --disable-setuid \
     --enable-cache-owner=root \
