--- a/lxc/PKGBUILD
+++ b/lxc/PKGBUILD
@@ -8,7 +8,7 @@
 
 pkgname=lxc
 epoch=1
-pkgver=4.0.10
+pkgver=4.0.12
 pkgrel=1
 pkgdesc="Linux Containers"
 arch=(x86_64 powerpc64le powerpc)
@@ -20,7 +20,7 @@ optdepends=('dnsmasq: lxc-net.service'
 	    'lua-filesystem: lxc-top'
 	    'lua-alt-getopt: lxc-top')
 license=('LGPL')
-options=('emptydirs')
+options=('emptydirs' 'debug')
 backup=('etc/lxc/default.conf'
 	'etc/default/lxc')
 validpgpkeys=('602F567663E593BCBD14F338C638974D64792D67')
@@ -28,21 +28,21 @@ source=("https://linuxcontainers.org/downloads/lxc/$pkgname-${pkgver}.tar.gz"{,.
 	"lxc.tmpfiles.d"
 	"lxc.service"
 	"lxc-auto.service")
-sha256sums=('a10c518056d2e497bd600e4ffac2853bdeab1e835bf455a6d87cc8df128bfae9'
+sha256sums=('db242f8366fc63e8c7588bb2017b354173cf3c4b20abc18780debdc48b14d3ef'
             'SKIP'
             '10e4f661872f773bf3122a2f9f2cb13344fea86a4ab72beecb4213be4325c479'
             'bbe7e0447bc3bf5f75f312c34d647f5218024731628a5e8633b1ea1801ebe16b'
             'b31f8d6b301ab9901b43f2696bcd0babb32b96e4a59fab63a2d642e43bf26bb3')
 
 prepare() {
-  cd "$srcdir/$pkgname-${pkgver/_/-}"
+  cd "$pkgname-${pkgver/_/-}"
   sed -i \
     -e 's|"\\"-//Davenport//DTD DocBook V3.0//EN\\""|"\\"-//OASIS//DTD DocBook XML\\" \\"https://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd\\""|' \
     configure.ac
 }
 
 build() {
-  cd "$srcdir/$pkgname-${pkgver/_/-}"
+  cd "$pkgname-${pkgver/_/-}"
   ./autogen.sh
   bashcompdir=/usr/share/bash-completion/completions ./configure \
     --prefix=/usr \
@@ -63,7 +63,7 @@ build() {
 }
 
 package() {
-  cd "$srcdir/$pkgname-${pkgver/_/-}"
+  cd "$pkgname-${pkgver/_/-}"
 
   make DESTDIR="$pkgdir" install
   install -d -m755 "$pkgdir/var/lib/lxc"
