* update mplayer to 38359-1

--- a/mplayer/PKGBUILD
+++ b/mplayer/PKGBUILD
@@ -6,8 +6,8 @@
 
 pkgbase=mplayer
 pkgname=('mplayer' 'mencoder')
-pkgver=38322
-pkgrel=2.1
+pkgver=38359
+pkgrel=1
 pkgdesc='Media player for Linux'
 url='http://www.mplayerhq.hu/'
 arch=(x86_64 powerpc64le powerpc)
@@ -26,7 +26,7 @@ makedepends=('xorgproto' 'libxxf86vm' 'libmad' 'libxinerama' 'libmng' 'libxss'
              'lame' 'desktop-file-utils' 'ttf-font' 'openal' 'speex'
              'libmpeg2')
 makedepends_x86_64=('yasm')
-options=('!emptydirs')
+options=('!emptydirs' '!lto')
 source=(${pkgbase}-${pkgver}::"svn://svn.mplayerhq.hu/mplayer/trunk#revision=${pkgver}"
         mplayer.desktop
         include-samba-4.0.patch)
