--- a/xfce4/xfce4-terminal/PKGBUILD
+++ b/xfce4/xfce4-terminal/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Aurelien Foret <orelien@chez.com>
 
 pkgname=xfce4-terminal
-pkgver=0.8.10
-pkgrel=2
+pkgver=1.0.2
+pkgrel=1
 pkgdesc="A modern terminal emulator primarily for the Xfce desktop environment"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://docs.xfce.org/apps/terminal/start"
@@ -13,8 +13,8 @@ license=('GPL2')
 groups=('xfce4')
 depends=('libxfce4ui' 'vte3' 'hicolor-icon-theme')
 makedepends=('intltool')
-source=(https://archive.xfce.org/src/apps/$pkgname/0.8/$pkgname-$pkgver.tar.bz2)
-sha256sums=('7a3337c198e01262a0412384823185753ac8a0345be1d6776a7e9bbbcbf33dc7')
+source=(https://archive.xfce.org/src/apps/$pkgname/${pkgver%.*}/$pkgname-$pkgver.tar.bz2)
+sha256sums=('ac1543167b43322ad2483ffb033a7e74669ecb59f4b63016a3c183d96141d326')
 
 prepare() {
   cd "$srcdir/$pkgname-$pkgver"
