* update librdkafka to 1.8.2-1

--- a/librdkafka/PKGBUILD
+++ b/librdkafka/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=librdkafka
 pkgver=1.8.2
 pkgrel=1
 pkgdesc='The Apache Kafka C/C++ library'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/edenhill/librdkafka'
 license=(BSD)
 depends=(libsasl zstd)
