* update libesmtp to 1.1.0-1

--- a/libesmtp/PKGBUILD
+++ b/libesmtp/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=libesmtp
 pkgver=1.1.0
 pkgrel=1
 pkgdesc='A library to manage posting mail to a preconfigured MTA.'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://libesmtp.github.io/'
 license=('LGPL')
 depends=('openssl')
