* update libdbi to 0.9.0-5

--- a/libdbi/PKGBUILD
+++ b/libdbi/PKGBUILD
@@ -10,7 +10,7 @@ pkgrel=5
 pkgdesc="Database independant abstraction layer for C"
 url="http://libdbi.sourceforge.net/"
 license=('LGPL')
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('glibc')
 options=(!emptydirs)
 source=("https://downloads.sourceforge.net/$pkgbase/$pkgbase-$pkgver.tar.gz")
