* update librabbitmq-c to 0.11.0-1

--- a/librabbitmq-c/PKGBUILD
+++ b/librabbitmq-c/PKGBUILD
@@ -9,6 +9,7 @@ pkgrel=1
 pkgdesc='RabbitMQ(amqp) library written in C-language'
 url='https://github.com/alanxz/rabbitmq-c'
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 license=('MIT')
 depends=('popt' 'openssl')
 makedepends=('cmake' 'docbook-xsl' 'doxygen' 'xmlto' 'ninja')
