* update aarch64-linux-gnu-linux-api-headers to 5.13.17-1

--- a/cross-compilers/aarch64-linux-gnu-linux-api-headers/PKGBUILD
+++ b/cross-compilers/aarch64-linux-gnu-linux-api-headers/PKGBUILD
@@ -24,13 +24,13 @@ validpgpkeys=('ABAF11C65A2970B130ABE3C479BE3E4300411886'   # Linus Torvalds
 build() {
   cd linux-${pkgver}
 
-  make ARCH=x86 mrproper
-  make ARCH=x86 headers_check
+  make ARCH=arm64 mrproper
+  make ARCH=arm64 headers_check
 }
 
 package() {
   cd linux-${pkgver}
-  make INSTALL_HDR_PATH="$pkgdir/usr/$_target" ARCH=x86 headers_install
+  make INSTALL_HDR_PATH="$pkgdir/usr/$_target" ARCH=arm64 headers_install
 
   # use headers from libdrm
   rm -rf "$pkgdir/usr/$_target/include/drm"
