--- a/perl/perl-io-string/PKGBUILD
+++ b/perl/perl-io-string/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=perl-io-string
 pkgver=1.08
 pkgrel=12
 pkgdesc="IO::File interface for in-core strings"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv)
 url="https://search.cpan.org/dist/IO-String"
 license=('GPL' 'PerlArtistic')
 depends=('perl>=5.10.0')
