--- a/cross-compilers/aarch64-linux-gnu-binutils/PKGBUILD
+++ b/cross-compilers/aarch64-linux-gnu-binutils/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=$_target-binutils
 pkgver=2.38
 pkgrel=1
 pkgdesc='Assemble and manipulate binary and object files for 32-bit and 64-bit RISC-V'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gnu.org/software/binutils/'
 license=(GPL)
 makedepends=(setconf)
