--- a/cross-compilers/aarch64-linux-gnu-gcc-stage2/PKGBUILD
+++ b/cross-compilers/aarch64-linux-gnu-gcc-stage2/PKGBUILD
@@ -14,6 +14,7 @@ _islver=0.24
 pkgrel=2
 pkgdesc="The GNU Compiler Collection. Stage 2 for toolchain building (${_target})"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
 depends=("${_target}-binutils>=2.38-1" "${_target}-glibc-headers>=2.35-1" libmpc zlib)
