* update php7 to 7.4.29-3

--- a/php7/PKGBUILD
+++ b/php7/PKGBUILD
@@ -22,8 +22,8 @@ pkgname=('php7'
          'php7-sqlite'
          'php7-tidy'
          'php7-xsl')
-pkgver=7.4.28
-pkgrel=1
+pkgver=7.4.29
+pkgrel=3
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('PHP')
 url='https://www.php.net/'
@@ -31,10 +31,11 @@ makedepends=('apache' 'aspell' 'c-client' 'db' 'enchant' 'gd' 'gmp' 'icu' 'libso
              'postgresql-libs' 'sqlite' 'systemd' 'tidy' 'unixodbc' 'curl' 'libtool' 'postfix' 'freetds' 'pcre2' 'libnsl'
              'oniguruma')
 checkdepends=('procps-ng')
+options=(debug)
 source=("https://php.net/distributions/php-${pkgver}.tar.xz"{,.asc}
         'apache.patch' 'apache.conf' 'php-fpm.patch' 'php-fpm.tmpfiles' 'php.ini.patch'
         'enchant-2.patch' 'php7.patch')
-sha512sums=('e7fa281a3be9ec46b7fa69619fd417fc04200dc64fd153f9670184d84b0aa3d5f3698536cf18476a96d8a42ba40b856ff57ab18e8e8a485dd9b95467d1952fa8'
+sha512sums=('cdec93b3d10b80da4a16757e60ecf8b35e78adfc57edd40917f53c4d20ce2847363ac99954cc92492cd84b81c01c4af667b16c8f4fe54aa98b9181ef5b1951ba'
             'SKIP'
             '284e3c0fe3ded0ff3e7d53f2769ea207b4591ef42abeff2d8604e87fe379929bd3b19ff294a729834f339a9da85ae7d4a7d8605890677222f78601b4f2b22247'
             'eccbe1a0c7b2757ab3c982c871cc591a66ad70f085aaa0d44f93cacacedc7b8fd21b8d0c66471327ff070db1bab1ab83a802f6fa190f33bdd74c134975e3910e'
@@ -45,6 +46,7 @@ sha512sums=('e7fa281a3be9ec46b7fa69619fd417fc04200dc64fd153f9670184d84b0aa3d5f36
             'f8c197fb657958016340db87de3e3427cc692cccc791e88c650362ed89bfd3be6180e430e5c446d19566b7e66225f9fa8cbed46a0909c87d6e046e65135d3031')
 validpgpkeys=('5A52880781F755608BF815FC910DEB46F53EA312'
               '42670A7FE4D0441C8E4632349E4FDC074A4EF02D')
+_interpreter=${pkgver%.*}
 
 prepare() {
 	cd "${srcdir}/php-${pkgver}"
@@ -192,6 +194,7 @@ check() {
 package_php7() {
 	pkgdesc='A general-purpose scripting language that is especially suited to web development'
 	depends=('libxml2' 'curl' 'libzip' 'pcre2' 'argon2' 'oniguruma')
+	provides=(php=$pkgver)
 	backup=('etc/php7/php.ini')
 
 	cd "${srcdir}/build"
@@ -210,6 +213,7 @@ package_php7() {
 package_php7-cgi() {
 	pkgdesc='CGI and FCGI SAPI for PHP'
 	depends=('php7')
+	provides=(php-cgi=$pkgver php-cgi-interpreter=$_interpreter)
 
 	cd "${srcdir}/build"
 	make -j1 INSTALL_ROOT="${pkgdir}" install-cgi
@@ -218,6 +222,7 @@ package_php7-cgi() {
 package_php7-apache() {
 	pkgdesc='Apache SAPI for PHP'
 	depends=('php7' 'apache' 'libnsl')
+	provides=(php-apache=$pkgver php-apache-interpreter=$_interpreter)
 	backup=('etc/httpd/conf/extra/php7_module.conf')
 
 	install -D -m755 "${srcdir}/build-apache/libs/libphp7.so" "${pkgdir}/usr/lib/httpd/modules/libphp7.so"
@@ -227,6 +232,7 @@ package_php7-apache() {
 package_php7-fpm() {
 	pkgdesc='FastCGI Process Manager for PHP'
 	depends=('php7' 'systemd')
+	provides=(php-fpm=$pkgver php-fpm-interpreter=$_interpreter)
 	backup=('etc/php7/php-fpm.conf' 'etc/php7/php-fpm.d/www.conf')
 	options=('!emptydirs')
 
@@ -239,6 +245,7 @@ package_php7-fpm() {
 package_php7-embed() {
 	pkgdesc='Embedded PHP SAPI library'
 	depends=('php7' 'systemd-libs' 'libnsl' 'libxcrypt')
+	provides=(php-embed=$pkgver php-embed-interpreter=$_interpreter)
 	options=('!emptydirs')
 
 	cd "${srcdir}/build"
@@ -248,6 +255,7 @@ package_php7-embed() {
 package_php7-phpdbg() {
 	pkgdesc='Interactive PHP debugger'
 	depends=('php7')
+	provides=(php-phpdbg=$pkgver php-phpdbg-interpreter=$_interpreter)
 	options=('!emptydirs')
 
 	cd "${srcdir}/build-phpdbg"
@@ -257,6 +265,7 @@ package_php7-phpdbg() {
 package_php7-dblib() {
 	pkgdesc='dblib module for PHP'
 	depends=('php7' 'freetds')
+	provides=(php-dblib=$pkgver php-dblib-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/pdo_dblib.so" "${pkgdir}/usr/lib/php7/modules/pdo_dblib.so"
 }
@@ -264,6 +273,7 @@ package_php7-dblib() {
 package_php7-enchant() {
 	pkgdesc='enchant module for PHP'
 	depends=('php7' 'enchant')
+	provides=(php-enchant=$pkgver php-enchant-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/enchant.so" "${pkgdir}/usr/lib/php7/modules/enchant.so"
 }
@@ -271,6 +281,7 @@ package_php7-enchant() {
 package_php7-gd() {
 	pkgdesc='gd module for PHP'
 	depends=('php7' 'gd')
+	provides=(php-gd=$pkgver php-gd-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/gd.so" "${pkgdir}/usr/lib/php7/modules/gd.so"
 }
@@ -278,6 +289,7 @@ package_php7-gd() {
 package_php7-imap() {
 	pkgdesc='imap module for PHP'
 	depends=('php7' 'c-client' 'libxcrypt')
+	provides=(php-imap=$pkgver php-imap-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/imap.so" "${pkgdir}/usr/lib/php7/modules/imap.so"
 }
@@ -285,6 +297,7 @@ package_php7-imap() {
 package_php7-intl() {
 	pkgdesc='intl module for PHP'
 	depends=('php7' 'icu')
+	provides=(php-intl=$pkgver php-intl-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/intl.so" "${pkgdir}/usr/lib/php7/modules/intl.so"
 }
@@ -292,6 +305,8 @@ package_php7-intl() {
 package_php7-sodium() {
 	pkgdesc='sodium module for PHP'
 	depends=('php7' 'libsodium')
+	provides=(php-sodium=$pkgver php-sodium-interpreter=$_interpreter)
+
 
 	install -D -m755 "${srcdir}/build/modules/sodium.so" "${pkgdir}/usr/lib/php7/modules/sodium.so"
 }
@@ -299,6 +314,7 @@ package_php7-sodium() {
 package_php7-odbc() {
 	pkgdesc='ODBC modules for PHP'
 	depends=('php7' 'unixodbc')
+	provides=(php-odbc=$pkgver php-odbc-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/odbc.so" "${pkgdir}/usr/lib/php7/modules/odbc.so"
 	install -D -m755 "${srcdir}/build/modules/pdo_odbc.so" "${pkgdir}/usr/lib/php7/modules/pdo_odbc.so"
@@ -307,6 +323,7 @@ package_php7-odbc() {
 package_php7-pgsql() {
 	pkgdesc='PostgreSQL modules for PHP'
 	depends=('php7' 'postgresql-libs')
+	provides=(php-pgsql=$pkgver php-pgsql-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/pgsql.so" "${pkgdir}/usr/lib/php7/modules/pgsql.so"
 	install -D -m755 "${srcdir}/build/modules/pdo_pgsql.so" "${pkgdir}/usr/lib/php7/modules/pdo_pgsql.so"
@@ -315,6 +332,7 @@ package_php7-pgsql() {
 package_php7-pspell() {
 	pkgdesc='pspell module for PHP'
 	depends=('php7' 'aspell')
+	provides=(php-pspell=$pkgver php-pspell-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/pspell.so" "${pkgdir}/usr/lib/php7/modules/pspell.so"
 }
@@ -322,6 +340,7 @@ package_php7-pspell() {
 package_php7-snmp() {
 	pkgdesc='snmp module for PHP'
 	depends=('php7' 'net-snmp')
+	provides=(php-snmp=$pkgver php-snmp-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/snmp.so" "${pkgdir}/usr/lib/php7/modules/snmp.so"
 }
@@ -329,6 +348,7 @@ package_php7-snmp() {
 package_php7-sqlite() {
 	pkgdesc='sqlite module for PHP'
 	depends=('php7' 'sqlite')
+	provides=(php-sqlite=$pkgver php-sqlite-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/sqlite3.so" "${pkgdir}/usr/lib/php7/modules/sqlite3.so"
 	install -D -m755 "${srcdir}/build/modules/pdo_sqlite.so" "${pkgdir}/usr/lib/php7/modules/pdo_sqlite.so"
@@ -337,6 +357,7 @@ package_php7-sqlite() {
 package_php7-tidy() {
 	pkgdesc='tidy module for PHP'
 	depends=('php7' 'tidy')
+	provides=(php-tidy=$pkgver php-tidy-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/tidy.so" "${pkgdir}/usr/lib/php7/modules/tidy.so"
 }
@@ -344,6 +365,7 @@ package_php7-tidy() {
 package_php7-xsl() {
 	pkgdesc='xsl module for PHP'
 	depends=('php7' 'libxslt')
+	provides=(php-xsl=$pkgver php-xsl-interpreter=$_interpreter)
 
 	install -D -m755 "${srcdir}/build/modules/xsl.so" "${pkgdir}/usr/lib/php7/modules/xsl.so"
 }
