--- a/geoclue/PKGBUILD
+++ b/geoclue/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: György Balló <ballogy@freestart.hu>
 
 pkgname=geoclue
-pkgver=2.5.7
-pkgrel=3
+pkgver=2.6.0
+pkgrel=2
 pkgdesc="Modular geoinformation service built on the D-Bus messaging system"
 arch=(x86_64 powerpc64le powerpc)
 url="https://www.freedesktop.org/wiki/Software/GeoClue/"
@@ -16,36 +16,30 @@ provides=("geoclue2=$pkgver-$pkgrel")
 conflicts=(geoclue2)
 replaces=(geoclue2)
 backup=(etc/geoclue/geoclue.conf)
-_commit=3bb60dd600a8b247fd6049e7e5b1c73c2c5fc0e8  # tags/2.5.7
-source=("git+https://gitlab.freedesktop.org/geoclue/geoclue.git#commit=$_commit"
-        0001-sources-Don-t-compute-movement-for-low-accuracy-sour.patch)
-sha256sums=('SKIP'
-            '22ac3c979cf2c95ba4f0d323cef2e10946667763c9bcec125a00cb213e502818')
+_commit=10998ca3215fb6d21b5a32fdf78bb5feffaf4c0f  # tags/2.6.0^0
+source=("git+https://gitlab.freedesktop.org/geoclue/geoclue.git#commit=$_commit")
+sha256sums=('SKIP')
+
+# Mozilla API keys (see https://location.services.mozilla.com/api)
+# Note: These are for Arch Linux use ONLY. For your own distribution, please
+# get your own set of keys. Feel free to contact heftig@archlinux.org for
+# more information.
+_mozilla_api_key=e05d56db0a694edc8b5aaebda3f2db6a
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  cd geoclue
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
-
-  # config patches (configurable hardcoded API key)
-  git cherry-pick -n 95c9ad4dc176 1a00809a0d89
-
-  # https://sources.debian.org/patches/geoclue-2.0/2.5.7-2/
-  git cherry-pick -n f9347ca7d51b c3eba034eb03 12445fb134ee
-
-  # https://sources.debian.org/patches/geoclue-2.0/2.5.7-2/fix-nowifi-query.patch/
-  git revert -n 194529c7e712 715cfbf5bec8
-
-  git apply -3 ../0001-sources-Don-t-compute-movement-for-low-accuracy-sour.patch
+  cd geoclue
 }
 
 build() {
-  arch-meson $pkgname build \
+  arch-meson geoclue build \
     -D dbus-srv-user=geoclue \
-    -D dbus-sys-dir=/usr/share/dbus-1/system.d
+    -D dbus-sys-dir=/usr/share/dbus-1/system.d \
+    -D mozilla-api-key="$_mozilla_api_key"
   meson compile -C build
 }
 
@@ -54,13 +48,16 @@ check() {
 }
 
 package() {
-  DESTDIR="$pkgdir" meson install -C build
+  meson install -C build --destdir "$pkgdir"
 
   echo 'u geoclue - "Geoinformation service" /var/lib/geoclue' |
-    install -Dm644 /dev/stdin "$pkgdir/usr/lib/sysusers.d/$pkgname.conf"
+    install -Dm644 /dev/stdin "$pkgdir/usr/lib/sysusers.d/geoclue.conf"
 
   echo 'd /var/lib/geoclue 0755 geoclue geoclue' |
-    install -Dm644 /dev/stdin "$pkgdir/usr/lib/tmpfiles.d/$pkgname.conf"
+    install -Dm644 /dev/stdin "$pkgdir/usr/lib/tmpfiles.d/geoclue.conf"
+
+  # Fixup mode to match polkit
+  install -d -o root -g 102 -m 750 "$pkgdir/usr/share/polkit-1/rules.d"
 }
 
 # vim:set sw=2 et:
