--- a/cross-compilers/aarch64-linux-gnu-gcc/PKGBUILD
+++ b/cross-compilers/aarch64-linux-gnu-gcc/PKGBUILD
@@ -13,7 +13,7 @@ _majorver=${pkgver:0:1}
 _islver=0.24
 pkgrel=3
 pkgdesc="The GNU Compiler Collection (${_target})"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL custom)
 url='http://gcc.gnu.org'
 depends=("${_target}-binutils>=2.38-1" "${_target}-glibc>=2.35-1" libmpc elfutils zlib)
