* update linux-4k to 5.17.6.arch1-1

--- a/linux-4k/config
+++ b/linux-4k/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.17.0-arch1 Kernel Configuration
+# Linux/powerpc 5.17.6-arch1 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.2.0"
 CONFIG_CC_IS_GCC=y
@@ -298,10 +298,10 @@ CONFIG_CPU_LITTLE_ENDIAN=y
 CONFIG_PPC64_BOOT_WRAPPER=y
 CONFIG_64BIT=y
 CONFIG_MMU=y
-CONFIG_ARCH_MMAP_RND_BITS_MAX=33
-CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=17
-CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
+CONFIG_ARCH_MMAP_RND_BITS_MAX=29
+CONFIG_ARCH_MMAP_RND_BITS_MIN=14
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=13
+CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=7
 CONFIG_NR_IRQS=512
 CONFIG_NMI_IPI=y
 CONFIG_STACKTRACE_SUPPORT=y
@@ -348,13 +348,13 @@ CONFIG_DTL=y
 CONFIG_PSERIES_ENERGY=m
 CONFIG_IO_EVENT_IRQ=y
 CONFIG_LPARCFG=y
-CONFIG_PPC_PSERIES_DEBUG=y
 CONFIG_PPC_SMLPAR=y
 CONFIG_CMM=m
 CONFIG_HV_PERF_CTRS=y
 CONFIG_IBMVIO=y
 CONFIG_PAPR_SCM=m
 CONFIG_PPC_SVM=y
+CONFIG_PPC_VAS=y
 CONFIG_KVM_GUEST=y
 CONFIG_EPAPR_PARAVIRT=y
 CONFIG_PPC_HASH_MMU_NATIVE=y
@@ -462,10 +462,11 @@ CONFIG_ILLEGAL_POINTER_VALUE=0x5deadbeef0000000
 CONFIG_ARCH_MEMORY_PROBE=y
 CONFIG_PPC_4K_PAGES=y
 # CONFIG_PPC_64K_PAGES is not set
-CONFIG_PPC_PAGE_SHIFT=12
+CONFIG_PPC_PAGE_SHIFT=16
 CONFIG_THREAD_SHIFT=14
-CONFIG_DATA_SHIFT=12
-CONFIG_FORCE_MAX_ZONEORDER=13
+CONFIG_DATA_SHIFT=16
+CONFIG_FORCE_MAX_ZONEORDER=9
+CONFIG_PPC_SUBPAGE_PROT=y
 # CONFIG_PPC_PROT_SAO_LPAR is not set
 CONFIG_PPC_COPRO_BASE=y
 CONFIG_SCHED_SMT=y
@@ -604,8 +605,7 @@ CONFIG_HAVE_IRQ_EXIT_ON_IRQ_STACK=y
 CONFIG_HAVE_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_ARCH_HAS_ELF_RANDOMIZE=y
 CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
-CONFIG_ARCH_MMAP_RND_BITS=18
-CONFIG_PAGE_SIZE_LESS_THAN_64KB=y
+CONFIG_ARCH_MMAP_RND_BITS=14
 CONFIG_PAGE_SIZE_LESS_THAN_256KB=y
 CONFIG_HAVE_RELIABLE_STACKTRACE=y
 CONFIG_HAVE_ARCH_NVRAM_OPS=y
@@ -829,7 +829,7 @@ CONFIG_ARCH_HAS_PKEYS=y
 # CONFIG_READ_ONLY_THP_FOR_FS is not set
 CONFIG_ARCH_HAS_PTE_SPECIAL=y
 CONFIG_ARCH_HAS_HUGEPD=y
-# CONFIG_ANON_VMA_NAME is not set
+CONFIG_ANON_VMA_NAME=y
 
 #
 # Data Access Monitoring
@@ -1938,7 +1938,7 @@ CONFIG_AUXILIARY_BUS=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
-# CONFIG_DEVTMPFS_SAFE is not set
+CONFIG_DEVTMPFS_SAFE=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 
@@ -2008,7 +2008,7 @@ CONFIG_GNSS_SERIAL=m
 CONFIG_GNSS_MTK_SERIAL=m
 CONFIG_GNSS_SIRF_SERIAL=m
 CONFIG_GNSS_UBX_SERIAL=m
-# CONFIG_GNSS_USB is not set
+CONFIG_GNSS_USB=m
 CONFIG_MTD=m
 # CONFIG_MTD_TESTS is not set
 
@@ -2188,6 +2188,7 @@ CONFIG_PARPORT_NOT_PC=y
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_NULL_BLK=m
 CONFIG_BLK_DEV_FD=m
+# CONFIG_BLK_DEV_FD_RAWCMD is not set
 CONFIG_CDROM=m
 # CONFIG_PARIDE is not set
 CONFIG_BLK_DEV_PCIESSD_MTIP32XX=m
@@ -2753,7 +2754,7 @@ CONFIG_NET_DSA_XRS700X=m
 CONFIG_NET_DSA_XRS700X_I2C=m
 CONFIG_NET_DSA_XRS700X_MDIO=m
 CONFIG_NET_DSA_QCA8K=m
-# CONFIG_NET_DSA_REALTEK_SMI is not set
+# CONFIG_NET_DSA_REALTEK is not set
 # CONFIG_NET_DSA_SMSC_LAN9303_I2C is not set
 # CONFIG_NET_DSA_SMSC_LAN9303_MDIO is not set
 # CONFIG_NET_DSA_VITESSE_VSC73XX_SPI is not set
@@ -2810,8 +2811,6 @@ CONFIG_BNXT_SRIOV=y
 CONFIG_BNXT_FLOWER_OFFLOAD=y
 CONFIG_BNXT_DCB=y
 CONFIG_BNXT_HWMON=y
-CONFIG_NET_VENDOR_BROCADE=y
-CONFIG_BNA=m
 CONFIG_NET_VENDOR_CADENCE=y
 CONFIG_MACB=m
 CONFIG_MACB_USE_HWSTAMP=y
@@ -2863,7 +2862,8 @@ CONFIG_BE2NET_BE3=y
 CONFIG_BE2NET_LANCER=y
 CONFIG_BE2NET_SKYHAWK=y
 CONFIG_NET_VENDOR_ENGLEDER=y
-# CONFIG_TSNEP is not set
+CONFIG_TSNEP=m
+# CONFIG_TSNEP_SELFTESTS is not set
 CONFIG_NET_VENDOR_EZCHIP=y
 CONFIG_EZCHIP_NPS_MANAGEMENT_ENET=m
 CONFIG_NET_VENDOR_GOOGLE=y
@@ -2895,7 +2895,6 @@ CONFIG_ICE=m
 CONFIG_ICE_SWITCHDEV=y
 CONFIG_FM10K=m
 CONFIG_IGC=m
-CONFIG_NET_VENDOR_MICROSOFT=y
 CONFIG_JME=m
 CONFIG_NET_VENDOR_LITEX=y
 CONFIG_LITEX_LITEETH=m
@@ -2950,12 +2949,14 @@ CONFIG_ENC28J60=m
 # CONFIG_ENC28J60_WRITEVERIFY is not set
 CONFIG_ENCX24J600=m
 CONFIG_LAN743X=m
-# CONFIG_LAN966X_SWITCH is not set
+CONFIG_LAN966X_SWITCH=m
 CONFIG_NET_VENDOR_MICROSEMI=y
 # CONFIG_MSCC_OCELOT_SWITCH is not set
+CONFIG_NET_VENDOR_MICROSOFT=y
 CONFIG_NET_VENDOR_MYRI=y
 CONFIG_MYRI10GE=m
 CONFIG_FEALNX=m
+# CONFIG_NET_VENDOR_NI is not set
 CONFIG_NET_VENDOR_NATSEMI=y
 CONFIG_NATSEMI=m
 CONFIG_NS83820=m
@@ -2968,7 +2969,6 @@ CONFIG_NFP=m
 # CONFIG_NFP_APP_FLOWER is not set
 CONFIG_NFP_APP_ABM_NIC=y
 # CONFIG_NFP_DEBUG is not set
-# CONFIG_NET_VENDOR_NI is not set
 CONFIG_NET_VENDOR_8390=y
 CONFIG_NE2K_PCI=m
 CONFIG_NET_VENDOR_NVIDIA=y
@@ -2995,6 +2995,8 @@ CONFIG_QED_RDMA=y
 CONFIG_QED_ISCSI=y
 CONFIG_QED_FCOE=y
 CONFIG_QED_OOO=y
+CONFIG_NET_VENDOR_BROCADE=y
+CONFIG_BNA=m
 CONFIG_NET_VENDOR_QUALCOMM=y
 CONFIG_QCA7000=m
 CONFIG_QCA7000_SPI=m
@@ -3017,6 +3019,11 @@ CONFIG_ROCKER=m
 CONFIG_NET_VENDOR_SAMSUNG=y
 CONFIG_SXGBE_ETH=m
 CONFIG_NET_VENDOR_SEEQ=y
+CONFIG_NET_VENDOR_SILAN=y
+CONFIG_SC92031=m
+CONFIG_NET_VENDOR_SIS=y
+CONFIG_SIS900=m
+CONFIG_SIS190=m
 CONFIG_NET_VENDOR_SOLARFLARE=y
 CONFIG_SFC=m
 CONFIG_SFC_MTD=y
@@ -3025,11 +3032,6 @@ CONFIG_SFC_SRIOV=y
 CONFIG_SFC_MCDI_LOGGING=y
 CONFIG_SFC_FALCON=m
 CONFIG_SFC_FALCON_MTD=y
-CONFIG_NET_VENDOR_SILAN=y
-CONFIG_SC92031=m
-CONFIG_NET_VENDOR_SIS=y
-CONFIG_SIS900=m
-CONFIG_SIS190=m
 CONFIG_NET_VENDOR_SMSC=y
 CONFIG_EPIC100=m
 CONFIG_SMSC911X=m
@@ -3057,7 +3059,7 @@ CONFIG_NET_VENDOR_TI=y
 # CONFIG_TI_CPSW_PHY_SEL is not set
 CONFIG_TLAN=m
 CONFIG_NET_VENDOR_VERTEXCOM=y
-# CONFIG_MSE102X is not set
+CONFIG_MSE102X=m
 CONFIG_NET_VENDOR_VIA=y
 CONFIG_VIA_RHINE=m
 # CONFIG_VIA_RHINE_MMIO is not set
@@ -3558,7 +3560,6 @@ CONFIG_MHI_WWAN_MBIM=m
 CONFIG_RPMSG_WWAN_CTRL=m
 # end of Wireless WAN
 
-# CONFIG_VMXNET3 is not set
 CONFIG_USB4_NET=m
 # CONFIG_NETDEVSIM is not set
 CONFIG_NET_FAILOVER=m
@@ -3945,7 +3946,7 @@ CONFIG_SERIAL_8250_DWLIB=y
 CONFIG_SERIAL_8250_FSL=y
 CONFIG_SERIAL_8250_DW=m
 CONFIG_SERIAL_8250_RT288X=y
-CONFIG_SERIAL_8250_PERICOM=y
+CONFIG_SERIAL_8250_PERICOM=m
 CONFIG_SERIAL_OF_PLATFORM=y
 
 #
@@ -4398,7 +4399,7 @@ CONFIG_GPIO_VIPERBOARD=m
 CONFIG_GPIO_AGGREGATOR=m
 CONFIG_GPIO_MOCKUP=m
 CONFIG_GPIO_VIRTIO=m
-# CONFIG_GPIO_SIM is not set
+CONFIG_GPIO_SIM=m
 # end of Virtual GPIO drivers
 
 CONFIG_W1=m
@@ -4489,7 +4490,7 @@ CONFIG_CHARGER_LTC4162L=m
 CONFIG_CHARGER_DETECTOR_MAX14656=m
 CONFIG_CHARGER_MAX77650=m
 # CONFIG_CHARGER_MAX77693 is not set
-# CONFIG_CHARGER_MAX77976 is not set
+CONFIG_CHARGER_MAX77976=m
 # CONFIG_CHARGER_MAX8997 is not set
 # CONFIG_CHARGER_MAX8998 is not set
 CONFIG_CHARGER_MP2629=m
@@ -4621,7 +4622,7 @@ CONFIG_SENSORS_NCT7802=m
 CONFIG_SENSORS_NCT7904=m
 CONFIG_SENSORS_NPCM7XX=m
 CONFIG_SENSORS_NZXT_KRAKEN2=m
-# CONFIG_SENSORS_NZXT_SMART2 is not set
+CONFIG_SENSORS_NZXT_SMART2=m
 CONFIG_SENSORS_PCF8591=m
 CONFIG_PMBUS=m
 CONFIG_SENSORS_PMBUS=m
@@ -4629,7 +4630,7 @@ CONFIG_SENSORS_ADM1266=m
 CONFIG_SENSORS_ADM1275=m
 CONFIG_SENSORS_BEL_PFE=m
 CONFIG_SENSORS_BPA_RS600=m
-# CONFIG_SENSORS_DELTA_AHE50DC_FAN is not set
+CONFIG_SENSORS_DELTA_AHE50DC_FAN=m
 CONFIG_SENSORS_FSP_3Y=m
 CONFIG_SENSORS_IBM_CFFPS=m
 CONFIG_SENSORS_DPS920AB=m
@@ -4637,7 +4638,7 @@ CONFIG_SENSORS_INSPUR_IPSPS=m
 # CONFIG_SENSORS_IR35221 is not set
 CONFIG_SENSORS_IR36021=m
 CONFIG_SENSORS_IR38064=m
-# CONFIG_SENSORS_IR38064_REGULATOR is not set
+CONFIG_SENSORS_IR38064_REGULATOR=y
 # CONFIG_SENSORS_IRPS5401 is not set
 CONFIG_SENSORS_ISL68137=m
 CONFIG_SENSORS_LM25066=m
@@ -4653,7 +4654,7 @@ CONFIG_SENSORS_MAX34440=m
 CONFIG_SENSORS_MAX8688=m
 CONFIG_SENSORS_MP2888=m
 CONFIG_SENSORS_MP2975=m
-# CONFIG_SENSORS_MP5023 is not set
+CONFIG_SENSORS_MP5023=m
 CONFIG_SENSORS_PIM4328=m
 CONFIG_SENSORS_PM6764TR=m
 # CONFIG_SENSORS_PXE1610 is not set
@@ -4686,7 +4687,7 @@ CONFIG_SENSORS_ADS7871=m
 CONFIG_SENSORS_AMC6821=m
 CONFIG_SENSORS_INA209=m
 CONFIG_SENSORS_INA2XX=m
-# CONFIG_SENSORS_INA238 is not set
+CONFIG_SENSORS_INA238=m
 CONFIG_SENSORS_INA3221=m
 CONFIG_SENSORS_TC74=m
 CONFIG_SENSORS_THMC50=m
@@ -5022,7 +5023,7 @@ CONFIG_REGULATOR_MAX8952=m
 CONFIG_REGULATOR_MAX8973=m
 CONFIG_REGULATOR_MAX8997=m
 CONFIG_REGULATOR_MAX8998=m
-# CONFIG_REGULATOR_MAX20086 is not set
+CONFIG_REGULATOR_MAX20086=m
 CONFIG_REGULATOR_MAX77686=m
 CONFIG_REGULATOR_MAX77693=m
 CONFIG_REGULATOR_MAX77802=m
@@ -5930,8 +5931,8 @@ CONFIG_DRM_UDL=m
 CONFIG_DRM_AST=m
 CONFIG_DRM_MGAG200=m
 CONFIG_DRM_RCAR_DW_HDMI=m
-# CONFIG_DRM_RCAR_USE_LVDS is not set
-# CONFIG_DRM_RCAR_MIPI_DSI is not set
+CONFIG_DRM_RCAR_USE_LVDS=y
+CONFIG_DRM_RCAR_MIPI_DSI=m
 CONFIG_DRM_QXL=m
 CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_PANEL=y
@@ -5942,7 +5943,7 @@ CONFIG_DRM_PANEL=y
 CONFIG_DRM_PANEL_ABT_Y030XX067A=m
 CONFIG_DRM_PANEL_ARM_VERSATILE=m
 CONFIG_DRM_PANEL_ASUS_Z00T_TM5P5_NT35596=m
-# CONFIG_DRM_PANEL_BOE_BF060Y8M_AJ0 is not set
+CONFIG_DRM_PANEL_BOE_BF060Y8M_AJ0=m
 CONFIG_DRM_PANEL_BOE_HIMAX8279D=m
 CONFIG_DRM_PANEL_BOE_TV101WUM_NL6=m
 CONFIG_DRM_PANEL_DSI_CM=m
@@ -5958,7 +5959,7 @@ CONFIG_DRM_PANEL_ILITEK_IL9322=m
 # CONFIG_DRM_PANEL_INNOLUX_EJ030NA is not set
 CONFIG_DRM_PANEL_INNOLUX_P079ZCA=m
 CONFIG_DRM_PANEL_JDI_LT070ME05000=m
-# CONFIG_DRM_PANEL_JDI_R63452 is not set
+CONFIG_DRM_PANEL_JDI_R63452=m
 CONFIG_DRM_PANEL_KHADAS_TS050=m
 CONFIG_DRM_PANEL_KINGDISPLAY_KD097D04=m
 CONFIG_DRM_PANEL_LEADTEK_LTK050H3146W=m
@@ -5968,7 +5969,7 @@ CONFIG_DRM_PANEL_LG_LB035Q02=m
 CONFIG_DRM_PANEL_LG_LG4573=m
 CONFIG_DRM_PANEL_NEC_NL8048HL11=m
 CONFIG_DRM_PANEL_NOVATEK_NT35510=m
-# CONFIG_DRM_PANEL_NOVATEK_NT35950 is not set
+CONFIG_DRM_PANEL_NOVATEK_NT35950=m
 CONFIG_DRM_PANEL_NOVATEK_NT36672A=m
 CONFIG_DRM_PANEL_NOVATEK_NT39016=m
 CONFIG_DRM_PANEL_MANTIX_MLAF057WE51=m
@@ -6000,7 +6001,7 @@ CONFIG_DRM_PANEL_SITRONIX_ST7703=m
 CONFIG_DRM_PANEL_SITRONIX_ST7789V=m
 CONFIG_DRM_PANEL_SONY_ACX424AKP=m
 CONFIG_DRM_PANEL_SONY_ACX565AKM=m
-# CONFIG_DRM_PANEL_SONY_TULIP_TRULY_NT35521 is not set
+CONFIG_DRM_PANEL_SONY_TULIP_TRULY_NT35521=m
 CONFIG_DRM_PANEL_TDO_TL070WSH30=m
 CONFIG_DRM_PANEL_TPO_TD028TTEC1=m
 CONFIG_DRM_PANEL_TPO_TD043MTEA1=m
@@ -6068,7 +6069,7 @@ CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_GM12U320=m
 CONFIG_DRM_SIMPLEDRM=m
 CONFIG_TINYDRM_HX8357D=m
-# CONFIG_TINYDRM_ILI9163 is not set
+CONFIG_TINYDRM_ILI9163=m
 # CONFIG_TINYDRM_ILI9225 is not set
 # CONFIG_TINYDRM_ILI9341 is not set
 # CONFIG_TINYDRM_ILI9486 is not set
@@ -6403,7 +6404,7 @@ CONFIG_SND_SOC_ADI_AXI_I2S=m
 CONFIG_SND_SOC_ADI_AXI_SPDIF=m
 CONFIG_SND_SOC_AMD_ACP=m
 CONFIG_SND_SOC_AMD_CZ_RT5645_MACH=m
-# CONFIG_SND_AMD_ACP_CONFIG is not set
+CONFIG_SND_AMD_ACP_CONFIG=m
 CONFIG_SND_ATMEL_SOC=m
 CONFIG_SND_SOC_MIKROE_PROTO=m
 CONFIG_SND_BCM63XX_I2S_WHISTLER=m
@@ -6476,7 +6477,7 @@ CONFIG_SND_SOC_ADAU7118_HW=m
 CONFIG_SND_SOC_ADAU7118_I2C=m
 CONFIG_SND_SOC_AK4104=m
 CONFIG_SND_SOC_AK4118=m
-# CONFIG_SND_SOC_AK4375 is not set
+CONFIG_SND_SOC_AK4375=m
 CONFIG_SND_SOC_AK4458=m
 CONFIG_SND_SOC_AK4554=m
 CONFIG_SND_SOC_AK4613=m
@@ -6595,7 +6596,7 @@ CONFIG_SND_SOC_TAS6424=m
 CONFIG_SND_SOC_TDA7419=m
 CONFIG_SND_SOC_TFA9879=m
 CONFIG_SND_SOC_TFA989X=m
-# CONFIG_SND_SOC_TLV320ADC3XXX is not set
+CONFIG_SND_SOC_TLV320ADC3XXX=m
 CONFIG_SND_SOC_TLV320AIC23=m
 CONFIG_SND_SOC_TLV320AIC23_I2C=m
 CONFIG_SND_SOC_TLV320AIC23_SPI=m
@@ -6725,7 +6726,7 @@ CONFIG_HID_KENSINGTON=m
 CONFIG_HID_LCPOWER=m
 CONFIG_HID_LED=m
 CONFIG_HID_LENOVO=m
-# CONFIG_HID_LETSKETCH is not set
+CONFIG_HID_LETSKETCH=m
 CONFIG_HID_LOGITECH=m
 CONFIG_HID_LOGITECH_DJ=m
 CONFIG_HID_LOGITECH_HIDPP=m
@@ -7342,7 +7343,7 @@ CONFIG_LEDS_AS3645A=m
 CONFIG_LEDS_KTD2692=m
 # CONFIG_LEDS_LM3601X is not set
 # CONFIG_LEDS_MAX77693 is not set
-# CONFIG_LEDS_MT6360 is not set
+CONFIG_LEDS_MT6360=m
 CONFIG_LEDS_RT4505=m
 # CONFIG_LEDS_RT8515 is not set
 CONFIG_LEDS_SGM3140=m
@@ -7868,7 +7869,7 @@ CONFIG_AD2S1210=m
 
 CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
-# CONFIG_VIDEO_MAX96712 is not set
+CONFIG_VIDEO_MAX96712=m
 # CONFIG_VIDEO_ZORAN is not set
 CONFIG_DVB_AV7110_IR=y
 CONFIG_DVB_AV7110=m
@@ -7964,7 +7965,7 @@ CONFIG_COMMON_CLK_SI570=m
 CONFIG_COMMON_CLK_CDCE706=m
 CONFIG_COMMON_CLK_CDCE925=m
 CONFIG_COMMON_CLK_CS2000_CP=m
-# CONFIG_COMMON_CLK_LAN966X is not set
+CONFIG_COMMON_CLK_LAN966X=y
 CONFIG_CLK_TWL6040=m
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
 CONFIG_COMMON_CLK_PALMAS=m
@@ -8357,7 +8358,7 @@ CONFIG_AD5764=m
 CONFIG_AD5766=m
 CONFIG_AD5770R=m
 CONFIG_AD5791=m
-# CONFIG_AD7293 is not set
+CONFIG_AD7293=m
 CONFIG_AD7303=m
 CONFIG_AD8801=m
 CONFIG_DPOT_DAC=m
@@ -8387,7 +8388,7 @@ CONFIG_IIO_SIMPLE_DUMMY=m
 #
 # Filters
 #
-# CONFIG_ADMV8818 is not set
+CONFIG_ADMV8818=m
 # end of Filters
 
 #
@@ -8405,7 +8406,7 @@ CONFIG_AD9523=m
 #
 CONFIG_ADF4350=m
 # CONFIG_ADF4371 is not set
-# CONFIG_ADMV1013 is not set
+CONFIG_ADMV1013=m
 CONFIG_ADRF6780=m
 # end of Phase-Locked Loop (PLL) frequency synthesizers
 # end of Frequency Synthesizers DDS/PLL
@@ -8762,10 +8763,10 @@ CONFIG_PHY_CADENCE_SIERRA=m
 CONFIG_PHY_CADENCE_SALVO=m
 CONFIG_PHY_FSL_IMX8MQ_USB=m
 # CONFIG_PHY_MIXEL_MIPI_DPHY is not set
-# CONFIG_PHY_FSL_IMX8M_PCIE is not set
+CONFIG_PHY_FSL_IMX8M_PCIE=m
 CONFIG_PHY_PXA_28NM_HSIC=m
 CONFIG_PHY_PXA_28NM_USB2=m
-# CONFIG_PHY_LAN966X_SERDES is not set
+CONFIG_PHY_LAN966X_SERDES=m
 # CONFIG_PHY_CPCAP_USB is not set
 CONFIG_PHY_MAPPHONE_MDM6600=m
 CONFIG_PHY_OCELOT_SERDES=m
@@ -9022,7 +9023,6 @@ CONFIG_EXFAT_FS=m
 CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_NTFS_FS=m
 # CONFIG_NTFS_DEBUG is not set
-# CONFIG_NTFS_RW is not set
 CONFIG_NTFS3_FS=m
 CONFIG_NTFS3_64BIT_CLUSTER=y
 CONFIG_NTFS3_LZX_XPRESS=y
@@ -9517,6 +9517,8 @@ CONFIG_CRYPTO_HASH_INFO=y
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_NX=y
 CONFIG_CRYPTO_DEV_NX_COMPRESS=m
+CONFIG_CRYPTO_DEV_NX_COMPRESS_PSERIES=m
+CONFIG_CRYPTO_DEV_NX_COMPRESS_POWERNV=m
 # CONFIG_CRYPTO_DEV_ATMEL_ECC is not set
 # CONFIG_CRYPTO_DEV_ATMEL_SHA204A is not set
 # CONFIG_CRYPTO_DEV_NITROX_CNN55XX is not set
@@ -9845,15 +9847,7 @@ CONFIG_JUMP_LABEL_FEATURE_CHECKS=y
 # CONFIG_PPC_IRQ_SOFT_MASK_DEBUG is not set
 # CONFIG_PPC_RFI_SRR_DEBUG is not set
 CONFIG_BOOTX_TEXT=y
-CONFIG_PPC_EARLY_DEBUG=y
-CONFIG_PPC_EARLY_DEBUG_BOOTX=y
-# CONFIG_PPC_EARLY_DEBUG_LPAR is not set
-# CONFIG_PPC_EARLY_DEBUG_LPAR_HVSI is not set
-# CONFIG_PPC_EARLY_DEBUG_RTAS_PANEL is not set
-# CONFIG_PPC_EARLY_DEBUG_RTAS_CONSOLE is not set
-# CONFIG_PPC_EARLY_DEBUG_OPAL_RAW is not set
-# CONFIG_PPC_EARLY_DEBUG_OPAL_HVSI is not set
-# CONFIG_PPC_EARLY_DEBUG_MEMCONS is not set
+# CONFIG_PPC_EARLY_DEBUG is not set
 # end of powerpc Debugging
 
 #
@@ -9866,6 +9860,6 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_KCOV is not set
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_ARCH_USE_MEMTEST=y
-CONFIG_MEMTEST=y
+# CONFIG_MEMTEST is not set
 # end of Kernel Testing and Coverage
 # end of Kernel hacking
