--- a/linux-g4/config
+++ b/linux-g4/config
@@ -1857,6 +1857,7 @@ CONFIG_PARPORT_NOT_PC=y
 CONFIG_BLK_DEV=y
 CONFIG_BLK_DEV_NULL_BLK=m
 CONFIG_BLK_DEV_FD=m
+# CONFIG_BLK_DEV_FD_RAWCMD is not set
 CONFIG_MAC_FLOPPY=y
 CONFIG_CDROM=m
 # CONFIG_PARIDE is not set
